<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/noDataLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    tools:visibility="visible">

    <ImageView
        android:id="@+id/noDataImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/no_data_available"
        app:layout_constraintBottom_toTopOf="@+id/noDataTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/grey"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@android:drawable/ic_dialog_alert" />

    <TextView
        android:id="@+id/noDataTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_xlarge"
        android:layout_marginTop="@dimen/margin_standard"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/no_data_title"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large"
        android:includeFontPadding="false"
        app:lineHeight="@dimen/line_height_xlarge"
        app:layout_constraintBottom_toTopOf="@+id/noDataRetryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noDataImageView" />

    <Button
        android:id="@+id/noDataRetryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_standard"
        android:text="@string/retry"
        android:includeFontPadding="false"
        android:textSize="@dimen/text_size_standard"
        app:lineHeight="@dimen/line_height_standard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noDataTextView" />
</androidx.constraintlayout.widget.ConstraintLayout> 