<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context=".ui.MovieDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="false"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:fitsSystemWindows="false"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <ImageView
                android:id="@+id/backdropIv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_backdrop"
                android:fitsSystemWindows="false"
                android:scaleType="centerCrop"
                android:transitionName="backdrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"
                tools:src="@tools:sample/backgrounds/scenic" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/backdrop_gradient"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                android:paddingTop="40dp"
                android:paddingBottom="16dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/back_icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@color/white"
                    android:contentDescription="@string/back_button"
                    app:contentPadding="4dp"
                    app:shapeAppearanceOverlay="@style/rounded12dpImageStyle"
                    app:srcCompat="?attr/homeAsUpIndicator"
                    app:tint="@color/black"
                    tools:ignore="ContentDescription" />
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/contentScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="24dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/posterPathIv"
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_poster"
                android:scaleType="fitXY"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/barrier"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/rounded12dpImageStyle"
                tools:ignore="ContentDescription"
                tools:src="@tools:sample/avatars"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/movieTitleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:includeFontPadding="false"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/posterPathIv"
                app:layout_constraintTop_toTopOf="parent"
                app:lineHeight="28sp"
                tools:text="Lilo &amp; Stitch" />

            <TextView
                android:id="@+id/taglineTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:textColor="@color/grey"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/posterPathIv"
                app:layout_constraintTop_toBottomOf="@id/movieTitleTextView"
                app:lineHeight="20sp"
                tools:text="Hold on to your coconuts." />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/genresChipGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                app:chipSpacingVertical="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/posterPathIv"
                app:layout_constraintTop_toBottomOf="@id/taglineTextView" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="movieTitleTextView, genresChipGroup, posterPathIv, taglineTextView" />

            <TextView
                android:id="@+id/ratingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:drawablePadding="4dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:textColor="@color/rating_yellow"
                android:textSize="16sp"
                app:drawableStartCompat="@android:drawable/btn_star_big_on"
                app:drawableTint="@color/rating_yellow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier"
                app:lineHeight="20sp"
                tools:text="7.1 (325 votes)" />

            <TextView
                android:id="@+id/releaseYearTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/grey"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@id/ratingTextView"
                app:layout_constraintStart_toEndOf="@id/ratingTextView"
                app:lineHeight="20sp"
                tools:text="2025" />

            <TextView
                android:id="@+id/runtimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/grey"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@id/releaseYearTextView"
                app:layout_constraintStart_toEndOf="@id/releaseYearTextView"
                app:lineHeight="20sp"
                tools:text="108 min" />

            <TextView
                android:id="@+id/overviewLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:includeFontPadding="false"
                android:text="@string/overview_label"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ratingTextView"
                app:lineHeight="22sp" />

            <TextView
                android:id="@+id/overviewTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/overviewLabelTextView"
                app:lineHeight="20sp"
                tools:text="The wildly funny and touching story of a lonely Hawaiian girl and the fugitive alien who helps to mend her broken family." />

            <TextView
                android:id="@+id/productionLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:includeFontPadding="false"
                android:text="@string/production_label"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/overviewTextView"
                app:lineHeight="22sp" />

            <TextView
                android:id="@+id/productionTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/productionLabelTextView"
                app:lineHeight="20sp"
                tools:text="Walt Disney Pictures, Rideback" />

            <TextView
                android:id="@+id/originalTitleLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:includeFontPadding="false"
                android:text="@string/original_title_label"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/productionTextView"
                app:lineHeight="22sp" />

            <TextView
                android:id="@+id/originalTitleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/originalTitleLabelTextView"
                app:lineHeight="20sp"
                tools:text="Lilo &amp; Stitch" />

            <TextView
                android:id="@+id/statusLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:includeFontPadding="false"
                android:text="@string/status_label"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/originalTitleTextView"
                app:lineHeight="22sp" />

            <TextView
                android:id="@+id/statusTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/statusLabelTextView"
                app:lineHeight="20sp"
                tools:text="Released" />

            <TextView
                android:id="@+id/languagesLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:includeFontPadding="false"
                android:text="@string/languages_label"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/statusTextView"
                app:lineHeight="22sp" />

            <TextView
                android:id="@+id/languagesTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/languagesLabelTextView"
                app:lineHeight="20sp"
                tools:text="English, Spanish" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />

    <include
        android:id="@+id/noDataView"
        layout="@layout/layout_no_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/save_movie"
        app:srcCompat="@android:drawable/ic_menu_save" />
</androidx.coordinatorlayout.widget.CoordinatorLayout> 